# pico-libppa

./: .clang-format  .env  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  justfile  udev.rules
.devcontainer/: devcontainer.json
include/boards/: aj-breadboard.h
include/ppa/: chk.h  ppa.h
libppa/: CMakeLists.txt
libppa/include/ppa/: cond.h  ppa.h
libppa/src/: cond.c  ppa.c
resources/: strauss.txt
src/: main.c  main.cpp  ppa.c
